fixed textbox white space, video resize
fixed textbox white caused by newline in between closing tag. resized video to dynamic with min width

--- a/final1/ivilon.css
+++ b/final1/ivilon.css
@@ -149,7 +149,8 @@
 
 .vid-container {
     height: 775px;
-    width: 1900px;
+    min-width: 1900px;
+    width: 100%;
     display: block;
     overflow: hidden;
     margin-bottom: 30px;
